<resources>
    <string name="app_name">Airline</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Airlines AZ</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_info">Info</string>
    <string name="menu_flight">Flight</string>
    <string name="menu_login">Login</string>
    <string name="menu_myProfile">My profile</string>
    <string name="menu_airline">Airline</string>
    <string name="menu_location">Location</string>


        <string name="prompt_email">Email</string>
        <string name="prompt_password">Password</string>
        <string name="action_sign_in">Sign in or register</string>
        <string name="action_sign_in_short">Sign in</string>
        <string name="action_save">Save</string>
        <string name="welcome">"Welcome !"</string>
        <string name="invalid_username">Not a valid username</string>
        <string name="invalid_password">Password must be >3 characters</string>
        <string name="login_failed">"Login failed"</string>
        <string name="action_add">Add</string>



</resources>