<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_flight"
            android:icon="@drawable/ic_menu_flight"
            android:title="@string/menu_flight" />
        <item
            android:id="@+id/nav_myProfile"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_myProfile" />
        <item
            android:id="@+id/nav_airline"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_airline" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_location" />

    </group>
</menu>