<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.airline.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.airline.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_flight"
        android:name="com.example.airline.ui.flights.FlightFragment"
        android:label="@string/menu_flight"
        tools:layout="@layout/fragment_flight" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.airline.ui.login.LoginActivity"
        android:label="@string/menu_login"
        tools:layout="@layout/activity_login" />
    <fragment
        android:id="@+id/nav_myProfile"
        android:name="com.example.airline.ui.myProfile.MyProfileActivity"
        android:label="@string/menu_myProfile"
        tools:layout="@layout/activity_myprofile" />

    <fragment
        android:id="@+id/nav_airline"
        android:name="com.example.airline.ui.airline.AirlineActivity"
        android:label="@string/menu_airline"
        tools:layout="@layout/activity_airlines" />
    <fragment
        android:id="@+id/nav_location"
        android:name="com.example.airline.ui.location.LocationActivity"
        android:label="@string/menu_location"
        tools:layout="@layout/activity_location" />
</navigation>